# AI-SLOP-Detector

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_scan.py
.github/workflows/: ci.yml
src/slop_detector/: cli.py  core.py  history.py
src/slop_detector/api/: server.py
src/slop_detector/auth/: __init__.py  audit.py
src/slop_detector/languages/: __init__.py  js_analyzer.py
src/slop_detector/metrics/: ddc.py  hallucination_deps.py  inflation.py
src/slop_detector/ml/: __init__.py  dataset_loader.py  pipeline.py
src/slop_detector/patterns/: __init__.py  placeholder.py  python_advanced.py
tests/: test_ci_gate.py  test_core.py  test_ddc.py
vscode-extension/: README.md  package.json  vscode-slop-detector-2.9.1.vsix
vscode-extension/src/: extension.ts
