[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-slop-detector"
version = "2.8.0"
description = "Evidence-based static analyzer for detecting AI-generated code quality issues with context-aware validation"
authors = [
    {name = "Flamehaven Labs", email = "info@flamehaven.space"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "code-quality", "static-analysis", "slop-detection", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pyyaml>=6.0",
    "radon>=6.0.1",
    "jinja2>=3.1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# JS/TS AST analysis (tree-sitter 0.25+ requires Python >=3.9)
js = [
    "tree-sitter>=0.25.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
# ML training pipeline
ml = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]
# ML with XGBoost ensemble (optional, heavier)
ml-full = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "xgboost>=2.0.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]
# Everything
full = [
    "tree-sitter>=0.25.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "xgboost>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0,<26.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
slop-detector = "slop_detector.cli:main"
ai-slop-detector = "slop_detector.cli:main"
slop-api = "slop_detector.api.server:run_server"

[project.urls]
Homepage = "https://github.com/flamehaven/ai-slop-detector"
Documentation = "https://ai-slop-detector.readthedocs.io"
Repository = "https://github.com/flamehaven/ai-slop-detector"
"Bug Tracker" = "https://github.com/flamehaven/ai-slop-detector/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=slop_detector --cov-report=term-missing --cov-report=html -p no:cacheprovider"

[tool.coverage.run]
# Experimental modules - not yet integrated with core
omit = [
    "*/auth/*",
    "*/api/*",
    "*/ml/*",
    "*/languages/*",
    "*/git_integration.py",
    "*/history.py",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
force-exclude = '''
tests/corpus/cross_language_mistakes.py
'''

[tool.ruff]
line-length = 100
exclude = ["tests/corpus", "tests/manual_test"]
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_errors = false
exclude = ["tests/corpus/", "tests/manual_test/"]

[[tool.mypy.overrides]]
module = [
    "slop_detector.auth.*",
    "slop_detector.api.*",
    "slop_detector.ml.*",
    "slop_detector.languages.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "yaml", "radon.*", "jwt",
    "tree_sitter", "tree_sitter_javascript", "tree_sitter_typescript",
    "xgboost", "sklearn.*", "numpy",
]
ignore_missing_imports = true
